@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qSharp 2.0.7 [TBA]
+------------------------------------------------------------------------------
+
+  - Fix: validate lambda expression upon construction
+
+------------------------------------------------------------------------------
   qSharp 2.0.6 [2014.09.11]
 ------------------------------------------------------------------------------
 
